# bin

./: .gitignore  Cargo.toml  LICENCE  Makefile  README.md  app.ts  build.rs  index.ts  input.txt  package-lock.json  package.json  std.ts  todo  tokens.ts  vm.ts
.github/: workflows.yml
.github/workflows/: calc-bin.yml
asm/: x86.asm
cmd/: cmd.ts  compiler.ts  config.ts
lib/: fs.ts  std.ts
src/: index.html  logger.ts  main.ts  seeder_logger.ts
vm/: lib.h  main.c  vm.c  vm.ts
