[package]
name = "vm-rs"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[workspace]
members = [ "dqlite-sys","macros"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
libsql = "0.4.0"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
macros = { path = "macros"}
pkg-config = "0.3.30"
tempfile = "3.10.1"


[build-dependencies]
cbindgen = "0.26.0"
bindgen = "0.69.4"
cc = "1.1.5"

